2001-06-18  Bart Schaefer  <schaefer@zsh.org>

	* 14965: Src/Zle/computil.c: Silence compiler warnings.

2001-06-18  Sven Wischnowsky  <wischnow@zsh.org>

	* 14962: Completion/Unix/Type/_path_files: make special-dirs
	work together with file-sort (ignore added qualifiers in a
	test)

2001-06-18  Peter Stephenson  <pws@csr.com>

	* 14959: Src/signals.c: more renames for 14951.

2001-06-18  Andrej Borsenkow <bor@zsh.org>

	* unposted: zshconfig.ac:  forgot to change
	zsh_cv_sys_dynamic_broken -> zsh_cv_shared_environ in one place

2001-06-18  Sven Wischnowsky  <wischnow@zsh.org>

	* 14951: Src/signals.c, Src/signals.h: rename handler() to
	zhandler() because it's now exported to modules

2001-06-17  Bart Schaefer  <schaefer@zsh.org>

	* Jason Began: 3931 (see cvs.netbsd.org): zshconfig.ac: Use
	-fPIC for gcc dynamic linking rather than -fpic.

2001-06-14  Peter Stephenson  <pws@csr.com>

	* 14921: Completion/Zsh/_zftp: autoload zfcd_match and zfget_match
	if necessary.

2001-06-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 14903: Src/Zle/complist.c, Src/Zle/zle_tricky.c: fixes for
	display bugs for completion lists (cursor left one line to far
	up or down)

2001-06-13  Peter Stephenson  <pws@csr.com>

	* 14893: Src/signals.c: make handler mod_export because it's
	needed for signal queueing in various modules.  Probably
	sensible to change handler to zhandler too --- not done yet.

2001-06-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 14897 (and Oliver Kiddle: 14862): Completion/Base/Utility/_values,
	Completion/Unix/Command/_mount, Completion/Unix/Type/_dir_list,
	Src/Zle/computil.c: fix for comparguments (completing after
	single letter options that get their argument in the next
	word); make _values ignore some of the standard option it may
	get; make _mount use _dir_list in some places and improve that;
	`document' comparguments and compvalues with some comments in
	computil.c

2001-06-13  Oliver Kiddle  <opk@zsh.org>
