@@ -1,3 +1,8 @@
+2001-06-20  Peter Stephenson  <pws@csr.com>
+
+	* 14988 with mod suggested in 14989: Src/exec.c: avoid names of
+	saved special parameters being trashed.
+
 2001-06-18  Bart Schaefer  <schaefer@zsh.org>
 
 	* 14965: Src/Zle/computil.c: Silence compiler warnings.
